<resources>
  <string name="application">Hopfen</string>

  <string name="login_with_untapped">Login using your\nUntappd account</string>

  <string name="error_dialog_title">Error</string>
  <string name="error_positive_button">OK</string>

  <string name="error_login_failed">Login failed, please try again</string>
  <string name="error_listings_failed">Failed to fetch listings</string>
  <string name="error_profile_failed">Failed to load profile</string>
  <string name="error_hops_failed">Failed to fetch hops</string>

  <string name="add_to_cart">Add To Cart</string>

  <string name="new_listing_dialog_title">New Listing</string>
  <string name="edit_listing_dialog_title">New Listing</string>

  <string name="sign_in">Sign in</string>

  <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="quantity">Quantity</string>
  <string name="price">Price (\u20AC)</string>
  <string name="hop_style">Hop Style</string>
  <string name="add_listing">Add Listing</string>
  <string name="cancel">Cancel</string>

  <string-array name="quantity_units">
    <item>kg</item>
    <item>g</item>
  </string-array>
</resources>
