<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <data>

    <variable
        name="model"
        type="de.brlo.hopfen.feature.login.LoginViewModel"/>

  </data>

  <android.support.design.widget.CoordinatorLayout
      android:id="@+id/coordinator"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        style="@style/Theme.Hopfen.Layout.Vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal">

      <TextView
          style="@style/Theme.Hopfen.TextAppearance.Headline"
          android:text="@string/application"/>

      <TextView
          style="@style/Theme.Hopfen.TextAppearance.Standard"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="@dimen/default_padding"
          android:text="@string/login_with_untapped"/>

      <Button
          android:background="@color/untappd_yellow"
          android:contentDescription="@string/login_with_untapped"
          android:layout_margin="@dimen/default_margin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="@dimen/default_padding"
          android:drawableStart="@drawable/ic_untappd"
          android:drawablePadding="@dimen/default_padding"
          android:text="@string/sign_in"
          android:textAllCaps="false"
          android:onClick="@{model::onLoginClick}"/>

      <com.google.android.gms.common.SignInButton
          android:id="@+id/googleSignIn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:onClick="@{() -> model.onGoogleLoginClick()"/>

    </LinearLayout>
  </android.support.design.widget.CoordinatorLayout>
</layout>
